# webcloud

./: .gitignore  LICENSE  README.md  stack.yaml  testcloud.hs  webcloud.cabal
src/Web/: Cloud.hs
