name:                webcloud
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD2
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.Cloud
  -- other-modules:       
  -- other-extensions:    
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.8, optparse-applicative == 0.10.0, cgi == 3001.2.1.0, bytestring == 0.10.4.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable testcloud
  main-is:             testcloud.hs
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.8, optparse-applicative == 0.10.0, webcloud
  default-language:    Haskell2010
  