name:                webcloud
version:             0.1.0.1
synopsis:            Turn an optparse-applicative program into a CGI program!
description:         Automatically generate a web interface for your existing
                     optparse-applicative command line applications.
license:             BSD2
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , stack.yaml

source-repository HEAD
  type: git
  location: https://github.com/mxswd/webcloud/

library
  exposed-modules:     Web.Cloud
  -- other-modules:       
  -- other-extensions:    
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , optparse-applicative >=0.10 && <0.13
                     , cgi >=3001.2 && <3001.3
                     , bytestring >=0.10 && <0.11
  hs-source-dirs:      src
  default-language:    Haskell2010

executable testcloud
  main-is:             testcloud.hs
  ghc-options:         -Wall
  build-depends:       base
                     , optparse-applicative
                     , webcloud
  default-language:    Haskell2010

